# FilesDSL

./: .gitignore  README.md  fdsl_execution_test.py  pyproject.toml
docs/: FAISS_INDEXING.md  FILESDSL_DOCUMENTATION.md  SYSTEM_PROMPT_EXAMPLE.md
examples/: demo.fdsl
filesdsl/: __init__.py  __main__.py  ast_nodes.py  errors.py  execution_budget.py  interpreter.py  parser.py  runtime.py  semantic.py  text_utils.py
filesdsl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_dsl.py  test_prepare_faiss.py
