[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "filesdsl"
version = "0.1.0"
description = "A safe file-exploration DSL for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.4",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "faiss-cpu>=1.12.0",
    "numpy>=2.1.0",
    "pytesseract>=0.3.13",
    "Pillow>=11.3.0",
]

[project.scripts]
filesdsl = "filesdsl.__main__:main"
fdsl = "filesdsl.__main__:main"

[tool.setuptools.packages.find]
include = ["filesdsl", "filesdsl.*"]
